[update] Use relative paths

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>React Boilerplate</title>
-    <link rel="stylesheet" href="/assets/css/application.css">
+    <link rel="stylesheet" href="assets/css/application.css">
   </head>
   <body>
     <main id="app">
       <h1>Application loading</h1>
     </main>
 
-    <script src="/assets/js/application.js"></script>
+    <script src="assets/js/application.js"></script>
   </body>
 </html>
